force-app/main/default/objects/Property_SalesAI__c/Property_SalesAI__c.object-meta.xml
<CustomObject>
    <label>Property Sale</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Property Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>