force-app/main/default/objects/Property_SalesAI__c/fields/Buyer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_First_Name__c</fullName>
    <description>The first name of the Buyer of a sold property</description>
    <inlineHelpText>The first name of the Buyer of a sold property</inlineHelpText>
    <label>Buyer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>