force-app/main/default/objects/Property_SalesAI__c/fields/Buyer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Last_Name__c</fullName>
    <description>The last name of the Buyer of a sold property</description>
    <inlineHelpText>The last name of the Buyer of a sold property</inlineHelpText>
    <label>Buyer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>