force-app/main/default/objects/Property_SalesAI__c/fields/Buyer_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Mailing_Address__c</fullName>
    <description>This is the address of the buyer of the sold property</description>
    <inlineHelpText>This is the address of the buyer of the sold property</inlineHelpText>
    <label>Buyer Mailing Address</label>
    <type>TextArea</type>
</CustomField>