force-app/main/default/objects/Property_SalesAI__c/fields/Custom_Data__c.field-meta.xml
<CustomField>
    <fullName>Custom_Data__c</fullName>
    <description>This is an internal field used for auditing.</description>
    <inlineHelpText>This is an internal field used for auditing.</inlineHelpText>
    <label>Custom Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>