force-app/main/default/objects/Property_SalesAI__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <description>This is the estimated value of the sold property</description>
    <inlineHelpText>This is the estimated value of the sold property</inlineHelpText>
    <label>Estimated Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>