force-app/main/default/objects/Property_SalesAI__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <description>This is an internal field used for auditing</description>
    <inlineHelpText>This is an internal field used for auditing</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>