force-app/main/default/objects/Property_SalesAI__c/fields/LFID__c.field-meta.xml
<CustomField>
    <fullName>LFID__c</fullName>
    <description>This fields stores the external Id for the Sold Property</description>
    <externalId>true</externalId>
    <inlineHelpText>This fields stores the external Id for the Sold Property</inlineHelpText>
    <label>LFID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>