force-app/main/default/objects/Property_SalesAI__c/fields/Owner_Occupant__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupant__c</fullName>
    <formula>IF(Property_Address__c = Buyer_Mailing_Address__c, &quot;Match&quot;, &quot;No Match&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Occupant</label>
    <type>Text</type>
</CustomField>