force-app/main/default/objects/Property_SalesAI__c/fields/Previous_Seller__c.field-meta.xml
<CustomField>
    <fullName>Previous_Seller__c</fullName>
    <label>Previous Seller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>