force-app/main/default/objects/Property_SalesAI__c/fields/Previous_Seller_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Seller_Mailing_Address__c</fullName>
    <label>Previous Seller Mailing Address</label>
    <type>TextArea</type>
</CustomField>