force-app/main/default/objects/Property_SalesAI__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>This is the address of the sold property</description>
    <inlineHelpText>This is the address of the sold property</inlineHelpText>
    <label>Property Address</label>
    <type>TextArea</type>
</CustomField>