force-app/main/default/objects/Property_SalesAI__c/fields/Seller_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_First_Name__c</fullName>
    <description>The first name of the Seller of a sold property</description>
    <inlineHelpText>The first name of the Seller of a sold property</inlineHelpText>
    <label>Seller First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>