force-app/main/default/objects/Property_SalesAI__c/fields/Seller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Last_Name__c</fullName>
    <description>The last name of the Seller of a sold property</description>
    <inlineHelpText>The last name of the Seller of a sold property</inlineHelpText>
    <label>Seller Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>