force-app/main/default/objects/Property_SalesAI__c/fields/Similarity_Key__c.field-meta.xml
<CustomField>
    <fullName>Similarity_Key__c</fullName>
    <description>This is an internal key used for address matching</description>
    <formula>Property__r.Similarity_Key__c</formula>
    <label>Similarity Key</label>
    <type>Text</type>
</CustomField>