force-app/main/default/objects/Property_SalesAI__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <description>This is an internal field to use for auditing.</description>
    <inlineHelpText>This is an internal field to use for auditing.</inlineHelpText>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>