force-app/main/default/objects/Property_SalesAI__c/fields/Subscription_Results__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Results</label>
    <referenceTo>Result_Subscription__c</referenceTo>
    <relationshipLabel>Properties Sales</relationshipLabel>
    <relationshipName>Properties_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>