force-app/main/default/objects/Property_SalesAI__c/fields/Taxed_Assessed_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxed_Assessed_Value__c</fullName>
    <label>Taxed Assessed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>